# GameBot

./: .gitignore  INSTALL.MD  README.md  config.py  config.yml  host.py
ArmController/: Makefile  README.md  boardmessage_pb2.py  controller.py  controllerConnector.py  main.py
ArmController/Arduino/controller/: controller.ino
BoardRecognizer/: BoardFinder.py  Makefile  README.md  boardRecognizer.py  boardSplitter.py  busConnector.py  display.py  filter.py  main.py  pieceRecognizer.py  recognizer.py  recognizerConnector.py
BoardRecognizer/tests/: state1.yml  state2.yml  state3.yml  state4.yml  state5.yml  state6.yml
Bus/: Makefile  README.md  bus.py  busConnector.py  main.cpp  main.py
CheckerAI/: AIBoard.cpp  AIBoard.h  AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  BusConnector.h  CMakeLists.txt  GameState.cpp  GameState.h  HostConnector.cpp  HostConnector.h  HumanPlayer.cpp  HumanPlayer.h  Makefile  Move.cpp  Move.h  Player.cpp  Player.h  README.md  Validator.cpp  Validator.h  ai  chess  main.cpp  movemessage.pb.cpp  movemessage.pb.h  movemessage.proto
CheckerAI/include/: AIPlayer.h  AlphaBeta.h  Board.h  BusConnector.h  GameState.h  HostConnector.h  Move.h
CheckerAI/src/: AIPlayer.cpp  AlphaBeta.cpp  Board.cpp  BusConnector.cpp  GameState.cpp  HostConnector.cpp  Move.cpp  Player.cpp  main.cpp
CheckerAI/test/: Board_test.cpp  CMakeLists.txt  GameState_test.cpp
ChessAI/: AIPlayer.h  GUI.h  Player.h  Validator.h  main.cpp
ChessBoardRecognizer/: .BoardRecognizer.py.swp  BoardRecognizer.py  PieceRecognizer.py  README.md
Host/: Main.py  Makefile  README.md  aiConnector.py  arbitrator.py  board.py  boardDisplayService.py  boardmessaga.proto  boardmessage_pb2.py  busConnector.py  config  config.py  controllerConnector.py  game.py  main.py  move.py  move_helper.py  movemessage.proto  movemessage_pb2.py  player.py  recognizerConnector.py  userConnector.py
Host/Bus/: busConnector.py
Host/features/: configuration.feature  fair_game.feature  play_game.feature
Host/features/steps/: arbitrator.py  configuration.py  gamestate.py  player_steps.py
Host/host/: aiConnector.py  move_helper.py  outputManager.py
Manager/: Main.py
ProtocolPrototypes/: README.md  boardmessage.proto  movemessage.proto
Test/: test.py
host_rs/: Cargo.toml
host_rs/src/: main.rs
protobufTest/: Makefile  client.py  client_python  data  movemessage.pb.cc  movemessage.pb.h  movemessage.proto  movemessage_pb2.py  server.cpp  server_cpp
